# caissa

./: .gitignore  README.md  package-lock.json
.fleet/: run.json
server/: Cargo.toml
server/src/: main.rs
server/src/ai/: hash.rs  mod.rs  negamax.rs
server/src/board/: board.rs  hybrid.rs  mod.rs  state.rs
server/src/engine/: minimax.rs  mod.rs
server/src/game/: engine.rs  fen.rs  mod.rs  moves.rs  square.rs
server/src/hash/: mod.rs
server/src/math/: kings.rs  knights.rs  mod.rs  pawns.rs  sliding.rs
server/src/server/: mod.rs
server/src/util/: mod.rs
src/: app.html
src/lib/: index.ts
src/lib/game/: logic.ts  move.ts  state.ts
src/lib/graphics/: highlighting.ts
src/lib/logic/: board.ts
src/lib/math/: betterAnimation.ts  moveCalculator.ts
src/lib/sound/: sounds.ts
src/lib/util/: matrix.ts  notation.ts
src/routes/: +page.svelte
web/: package.json
web/src/lib/: Chessboard.svelte
web/src/lib/ai/: ai.ts
web/src/lib/api/: moves.ts
web/src/lib/game/: logic.ts  move.ts
web/src/lib/math/: moveCalculator.ts
web/src/lib/util/: notation.ts
web/src/routes/: +page.svelte
web/src/routes/bot/: +page.svelte
web/src/routes/practice/: +page.svelte
